# cua-house

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_cua_house_env_server.py  worker-images.yaml
bridges/: README.md
bridges/cua_mcp_server/: package.json
bridges/cua_mcp_server/src/: index.js
bridges/openclaw_plugin/: index.cjs  index.js  openclaw.plugin.json
bridges/openclaw_plugin/src/: tools.js
docs/: dashboard-dev-prompt.md
docs/api/: CHANGELOG.md
docs/architecture/: cluster.md  overview.md  runtime-model.md
docs/deployment/: clone-worker.md  cluster.md  gcp-infra.md  host-setup.md
docs/development/: setup.md  testing.md
docs/operations/: image-update-sop.md  pitfalls.md  vm-image-maintenance.md
examples/: client_usage.py  images.yaml  kvm02-server.yaml  server.yaml  worker.yaml
examples/systemd/: cua-house-worker.service
scripts/: _clone-worker-bootstrap.sh  clone-worker.sh  cold-boot-test.sh  export-gcp-to-qcow2.sh  mock_cluster_stress.py  start-worker.sh  upload-template.sh
src/cua_house/: __init__.py  cli.py
src/cua_house/common/: __init__.py  events.py
src/cua_house/env_server/: README.md  __init__.py  api.py  bake_external_image.py  client.py  models.py  port_pool.py  qmp_client.py  runtime.py  scheduler.py  task_data.py
src/cua_house/env_server/configs/: agenthle_env_images.yaml  agenthle_env_server.yaml
src/cua_house/remote/: __init__.py  base.py  remote.py
src/cua_house/remote/bridges/cua_mcp_server/: package-lock.json
src/cua_house/remote/bridges/cua_mcp_server/src/: cua-client.js
src/cua_house/remote/bridges/openclaw_plugin/: index.ts  package.json
src/cua_house/remote/bridges/openclaw_plugin/src/: cua-client.js  cua-client.ts  tools.ts
tests/: conftest.py  test_env_server.py
