[project]
name = "cua-house-workspace"
version = "0.1.0"
description = "Computer-use VM sandbox orchestrator"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cua-house-common = { workspace = true }
cua-house-server = { workspace = true }
cua-house-client = { workspace = true }

[dependency-groups]
dev = [
    "cua-house-server",
    "cua-house-client",
    "cua-house-common",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "tests"]
